--- a/scss/style.scss
+++ b/scss/style.scss
@@ -264,7 +264,7 @@ p.icon img {
             color: $clr-creme;
             font-size: 42px;
             font-weight: 700;
-          
+
         }
 
         p {
@@ -289,7 +289,11 @@ p.icon img {
     border: 1px solid #cfcfcf;
     padding: 2rem 2rem;
     background: transparent;
-    color: $clr-white;
+    color: grey;
+}
+
+.input-control::placeholder {
+    color: grey;
 }
 
 textarea.input-control {
@@ -392,34 +396,40 @@ section.contact__text {
 .howplay {
     padding: 50px 0;
 }
-.howplay-content{
-    h3{
+
+.howplay-content {
+    h3 {
         font-size: 42px;
         color: $clr-purple;
         font-weight: 700;
     }
-    h4{
-        font-size:20px;
-        color: $clr-purple;
-        font-weight: 700;
-    }
-}
-section.privacy-policy {
-    padding: 50px 0;
-}
-.content-wrap{
-    h2{
-        font-size: 42px;
-        color: $clr-purple;
-        font-weight: 700;
-        text-align: left;
-    }
-    h3{
+
+    h4 {
         font-size: 20px;
         color: $clr-purple;
         font-weight: 700;
     }
 }
+
+section.privacy-policy {
+    padding: 50px 0;
+}
+
+.content-wrap {
+    h2 {
+        font-size: 42px;
+        color: $clr-purple;
+        font-weight: 700;
+        text-align: left;
+    }
+
+    h3 {
+        font-size: 20px;
+        color: $clr-purple;
+        font-weight: 700;
+    }
+}
+
 /*howplay-content-css-end*/
 
 
