--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -324,6 +324,19 @@
     .howplay-content h3 {
         font-size: 27px;
     }
+
+    .fantasy-text span {
+        line-height: 17px;
+    }
+
+    .fantasy-text h3::after {
+        content: none;
+    }
+
+    .fantasy-text h3 {
+        margin: 20px 0;
+    }
+
 }
 
 /*# sourceMappingURL=responsive.css.map */
