--- a/scss/style.scss
+++ b/scss/style.scss
@@ -156,6 +156,7 @@ p.icon img {
         text-align: center;
         max-width: 292px;
         margin: 0 auto;
+        border-radius: 17px;
 
         h4 {
             color: $clr-white;
@@ -306,7 +307,7 @@ textarea.input-control {
     height: auto;
 }
 
-.form-group .submit-btn {
+a.submit {
     background: orange;
     border: 1px solid orange;
     transition: all 0.2s linear;
