--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -298,7 +298,9 @@
     .homebanner-section {
         height: 450px;
     }
-
+    .content-wrap h2{
+        font-size: 27px;
+    }
     .telephonic-info {
         padding: 30px 0;
     }
