--- a/scss/style.scss
+++ b/scss/style.scss
@@ -171,6 +171,11 @@ p.icon img {
         img {
             max-width: 60px;
             margin: 0 auto;
+            transition: 1s ease;
+            &:hover{
+                transform: scale(1.2);
+transition: 1s ease;
+            }
         }
     }
 }
