--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -329,6 +329,7 @@
 
     .fantasy-text span {
         line-height: 17px;
+        font-size: 27px;
     }
 
     .fantasy-text h3::after {
@@ -336,7 +337,8 @@
     }
 
     .fantasy-text h3 {
-        margin: 20px 0;
+        margin: 20px 0  0 0;
+        font-size: 27px;
     }
 
 }
