--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,12 @@ p.icon img {
   max-width: 292px;
   margin: 0 auto;
   border-radius: 17px;
+  transition: 1s ease;
+  opacity: 1;
+}
+.leaderboard-rating:hover:hover {
+  border-radius: 50%;
+  transition: 1s ease;
 }
 .leaderboard-rating h4 {
   color: #fff;
@@ -240,10 +246,6 @@ p.icon img {
 .leaderboard-rating img {
   max-width: 60px;
   margin: 0 auto;
-  transition: 1s ease;
-}
-.leaderboard-rating img:hover {
-  transform: scale(1.2);
   transition: 1s ease;
 }
 
