--- a/scss/style.scss
+++ b/scss/style.scss
@@ -157,6 +157,15 @@ p.icon img {
         max-width: 292px;
         margin: 0 auto;
         border-radius: 17px;
+        transition: 1s ease;
+        opacity: 1;
+
+        &:hover {
+            &:hover {
+                border-radius: 50%;
+                transition: 1s ease;
+            }
+        }
 
         h4 {
             color: $clr-white;
@@ -172,10 +181,7 @@ p.icon img {
             max-width: 60px;
             margin: 0 auto;
             transition: 1s ease;
-            &:hover{
-                transform: scale(1.2);
-transition: 1s ease;
-            }
+
         }
     }
 }
@@ -395,7 +401,7 @@ section.contact__text {
         display: flex;
         justify-content: center;
         padding-top: 30px;
-     gap: 20px;
+        gap: 20px;
 
         img {
             max-width: 55px;
