--- a/scss/style.scss
+++ b/scss/style.scss
@@ -161,10 +161,8 @@ p.icon img {
         opacity: 1;
 
         &:hover {
-            &:hover {
-                border-radius: 50%;
-                transition: 1s ease;
-            }
+            opacity: 0.5;
+            transition: 1s ease;
         }
 
         h4 {
@@ -181,6 +179,10 @@ p.icon img {
             max-width: 60px;
             margin: 0 auto;
             transition: 1s ease;
+
+            &:hover {
+                transform: translateY(-10px);
+            }
 
         }
     }
