--- a/css/style.css
+++ b/css/style.css
@@ -155,21 +155,30 @@ input#name {
   justify-content: end;
 }
 
-input#email {
-  display: block;
-  width: 100%;
-  height: 5rem;
-  max-width: 50%;
-  border: 1px solid #ffd523;
-  padding: 2rem 2rem;
-  background: #ffd523;
+img.img-fluid.submiticon {
+  height: 25px;
+  width: 25px;
   color: #000000;
-  padding-left: 50px;
   cursor: pointer;
+  margin-right: 5px;
 }
-input#email:hover {
+
+a.btnsubmit {
+  background: #ffd523;
+  padding: 11px 36px;
+  border: 1px solid #ffd523;
+  display: inline-block;
+  color: #fff;
+  font-size: 17px;
+  text-transform: uppercase;
+}
+a.btnsubmit:hover {
   background-color: gray;
   border: 1px solid gray;
+}
+
+.form-group.new > a.btnsubmit {
+  display: inline-block;
 }
 
 input#email::placeholder {
@@ -437,7 +446,7 @@ section.contact__text {
   gap: 20px;
 }
 .footer-picture img {
-  max-width: 55px;
+  max-width: 45px;
 }
 
 /*howplay-content-css-start*/
