--- a/css/responsive.css
+++ b/css/responsive.css
@@ -271,6 +271,23 @@
     margin: 20px 0 0 0;
     font-size: 27px;
   }
+  .desktop-version {
+    display: none;
+  }
+  section.home-main.mobile-table {
+    display: block;
+  }
+  .mobile-view-design.entertainment {
+    display: block;
+  }
+  .mobile-view-design p {
+    text-align: left !important;
+  }
+  p.rated-star {
+    color: #fdbb4f;
+    font-size: 14px !important;
+    margin-bottom: 0 !important;
+  }
 }
 
 
