--- a/scss/style.scss
+++ b/scss/style.scss
@@ -70,9 +70,11 @@ input#name {
     background: transparent;
     color: #000000;
 }
-.form-group.space > input#name {
+
+.form-group.space>input#name {
     width: 50%;
 }
+
 .form-group.space {
     text-align: right;
     display: flex;
@@ -464,6 +466,98 @@ section.privacy-policy {
 }
 
 /*howplay-content-css-end*/
+
+/*betting-css-start*/
+.abt-cols h2 {
+    margin-top: 30px;
+    font-size: 20px;
+    color: #4e1693;
+}
+
+.table.brand-table-new {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 1rem;
+    background-color: #fff;
+}
+
+.brand-table table tr td {
+    padding: 30px 15px;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+    border-top: 1px solid #dee2e6;
+}
+
+.mob-pro-score-main {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+span.mob-pro-score-main strong {
+    font-size: 32px;
+    font-weight: 600;
+    margin-left: 15px;
+}
+
+.rateit-now {
+    text-align: center;
+    display: block;
+    font-size: 14px;
+    font-weight: 500;
+    color: #8b8b8b;
+}
+
+.stars-main.rate {
+    text-align: center;
+    margin-top: 5px;
+}
+
+.rated-star i {
+    color: #fb0;
+    font-size: 16px;
+}
+
+.first-bonus {
+    display: block;
+    text-align: center;
+    font-weight: 600;
+    font-size: 21px;
+    line-height: normal;
+    color: #4e1693;
+}
+
+.second-bonus {
+    display: block;
+    text-align: center;
+    font-size: 15px;
+    color: #000;
+    font-weight: 400;
+}
+
+a.sign {
+    background: orange;
+    color: #fff;
+    height: 50px;
+    display: inline-block;
+    line-height: 50px;
+    width: 100%;
+    max-width: 120px;
+    border-radius: 4px;
+    font-size: 16px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+section.home-main.mobile-table {
+    display: none;
+}
+
+/*betting-css-end*/
 
 
 
