--- a/css/style.css
+++ b/css/style.css
@@ -503,7 +503,7 @@ section.privacy-policy {
   padding: 30px 15px;
   text-align: center;
   display: table-cell;
-  vertical-align: middle;
+  vertical-align: top;
   border-top: 1px solid #dee2e6;
 }
 
