--- a/css/responsive.css
+++ b/css/responsive.css
@@ -288,6 +288,54 @@
     font-size: 14px !important;
     margin-bottom: 0 !important;
   }
+  section.home-main.mobile-table {
+    display: block;
+  }
+  .desktop-version {
+    display: none;
+  }
+}
+@media screen and (max-width: 480px) {
+  .mobile-view-design .awesome a {
+    font-size: 15px;
+    padding: 16px 30px;
+  }
+  .mobile-view-design .warapper .main_box .one_o h6.heading_main {
+    word-break: break-word;
+  }
+  .one_o p {
+    font-size: 18px;
+  }
+  .mobile-view-design p {
+    font-size: 17px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .first-bonus {
+    display: block;
+    text-align: center;
+    font-weight: 600;
+    font-size: 14px;
+    color: #2e3986;
+  }
+  section.home-main.mobile-table .container {
+    padding: 0 8px;
+  }
+  .myceltwo {
+    margin: 0;
+  }
+  p {
+    font-size: 14px;
+    text-align: justify;
+  }
+  .mobile-view-design p {
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 395px) {
+  .mobile-view-design .awesome a {
+    font-size: 12px;
+  }
 }
 
 
