--- a/css/style.css
+++ b/css/style.css
@@ -607,7 +607,7 @@ img.encrypted-img {
 
 .mobile-view-design .warapper .main_box .one_o h6.heading_main {
   font-size: 23px !important;
-  color: #1a385a;
+  color: #4e1693;
   font-weight: 600;
 }
 
@@ -689,7 +689,7 @@ p.rating-text {
 }
 
 .mobile-view-design p {
-  color: #fff;
+  color: #4e1693;
   margin-bottom: 0;
 }
 
