--- a/scss/style.scss
+++ b/scss/style.scss
@@ -589,7 +589,7 @@ img.encrypted-img {
 
 .mobile-view-design .warapper .main_box .one_o h6.heading_main {
     font-size: 23px !important;
-    color: #1a385a;
+    color: $clr-purple;
     font-weight: 600;
 }
 
@@ -673,7 +673,7 @@ p.rating-text {
 }
 
 .mobile-view-design p {
-    color: #fff;
+    color: $clr-purple;
     margin-bottom: 0;
 }
 
