--- a/scss/style.scss
+++ b/scss/style.scss
@@ -673,8 +673,9 @@ p.rating-text {
 }
 
 .mobile-view-design p {
-    color: $clr-purple;
+    color: $clr-black;
     margin-bottom: 0;
+    font-weight: 500;
 }
 
 .text_auality p {
