--- a/css/style.css
+++ b/css/style.css
@@ -689,9 +689,13 @@ p.rating-text {
 }
 
 .mobile-view-design p {
-  color: #0C0B0B;
+  color: #fff;
   margin-bottom: 0;
   font-weight: 500;
+}
+
+.one_o p {
+  color: black !important;
 }
 
 .text_auality p {
