--- a/scss/style.scss
+++ b/scss/style.scss
@@ -503,11 +503,12 @@ section.privacy-policy {
 }
 
 .beste {
-    font-size: 25px !important;
+    font-size: 22px !important;
     font-weight: 600;
     color: #fff;
-    max-width: 220px;
+    max-width: 60%;
     width: 100%;
+    text-align: left;
 }
 
 .encrypted {
