--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,8 @@ p.icon img {
 }
 .about-picture img {
   border-radius: 20px;
-  width: 450px;
+  max-width: 450px;
+  width: 100%;
   height: 450px;
   object-fit: cover;
 }
