--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -1,6 +1,22 @@
 /*media queries start*/
+@media screen and (max-width: 1220px) {
+    .locallanguage-text {
+        width: calc(100% + 93px);
+        padding: 38px;
+    }
+}
 @media screen and (max-width: 1199px) {
-
+    .leaderboard-rating {
+        border: 1px solid #00bcd4;
+        padding: 30px 55px;
+        background-color: #00bcd4;
+        text-align: center;
+        max-width: 250px;
+        margin: 0 auto;
+        border-radius: 17px;
+        transition: 1s ease;
+        opacity: 1;
+    }
     .container {
         padding: 0 20px;
     }
@@ -19,8 +35,9 @@
     }
 
     .fantasy-text.about {
-        margin-left: -97px;
+        margin-left: -80px;
     }
+   
 }
 
 @media screen and (max-width: 1024px) {
@@ -211,6 +228,13 @@
             opacity: 0.7;
         }
     }
+    .leaderboard-rating h4 {
+        font-size: 24px;
+    }
+    .leaderboard-rating {
+        padding: 30px 24px;
+        max-width: 223px;
+    }
 }
 
 @media screen and (max-width:820px) {
@@ -228,7 +252,6 @@
 
     .leaderboard-rating {
         padding: 30px 20px;
-        max-width: none;
     }
 
     .contact-picture {
