--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,7 +57,6 @@ html {
     background-position: center;
     object-fit: cover;
 }
-
 /*banner-css-end*/
 
 /*home-css-start*/
@@ -70,6 +69,7 @@ input#name {
     background: transparent;
     color: #000000;
 }
+
 
 .form-group.space>input#name {
     width: 50%;
@@ -256,7 +256,8 @@ p.icon img {
     &-picture {
         img {
             border-radius: 20px;
-            width: 450px;
+            max-width:450px; 
+            width: 100%;
             height: 450px;
             object-fit: cover;
         }
