--- a/css/responsive.css
+++ b/css/responsive.css
@@ -230,7 +230,7 @@
     max-width: 100%;
   }
   .about-picture img {
-    width: 100%;
+    max-width: 100%;
   }
   .fantasy-picture img {
     max-width: 100%;
