--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,6 +57,7 @@ html {
     background-position: center;
     object-fit: cover;
 }
+
 /*banner-css-end*/
 
 /*home-css-start*/
@@ -256,7 +257,7 @@ p.icon img {
     &-picture {
         img {
             border-radius: 20px;
-            max-width:450px; 
+            max-width: 450px;
             width: 100%;
             height: 450px;
             object-fit: cover;
@@ -556,7 +557,7 @@ img.encrypted-img {
     justify-content: space-between;
     width: 100%;
     align-items: center;
-    background-color: #ffd523;
+    background-color: #ffd52369;
     padding: 10px;
     position: relative;
     z-index: 1;
@@ -568,7 +569,7 @@ img.encrypted-img {
     left: 0;
     right: 0;
     bottom: 0;
-    background: $clr-purple;
+    background: #4e1693c7;
     position: absolute;
     clip-path: polygon(0 0, 80% 0%, 100% 100%, 0% 100%);
     width: 55%;
@@ -591,7 +592,7 @@ img.encrypted-img {
 
 .mobile-view-design .warapper .main_box .one_o h6.heading_main {
     font-size: 23px !important;
-    color: $clr-purple;
+    color: #744496;
     font-weight: 600;
 }
 
@@ -642,7 +643,7 @@ img.encrypted-img {
     letter-spacing: 1px;
     font-weight: 600;
     text-transform: uppercase;
-    background: $clr-purple;
+    background: #744496;
     padding: 16px 44px;
     text-align: center;
     border-radius: 6px;
