--- a/css/style.css
+++ b/css/style.css
@@ -564,7 +564,7 @@ img.encrypted-img {
 
 .mobile-view-design .warapper {
   background: rgba(215, 217, 219, 0);
-  border-bottom: 4px solid #4e1693;
+  border-bottom: 4px solid #f7f0dd;
   border-radius: 6px;
   margin: 30px 0;
 }
@@ -574,7 +574,7 @@ img.encrypted-img {
   justify-content: space-between;
   width: 100%;
   align-items: center;
-  background-color: rgba(255, 213, 35, 0.4117647059);
+  background-color: #f7f0dd;
   padding: 10px;
   position: relative;
   z-index: 1;
@@ -586,7 +586,7 @@ img.encrypted-img {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(78, 22, 147, 0.7803921569);
+  background: rgba(6, 19, 15, 0.768627451);
   position: absolute;
   clip-path: polygon(0 0, 80% 0%, 100% 100%, 0% 100%);
   width: 55%;
@@ -609,7 +609,7 @@ img.encrypted-img {
 
 .mobile-view-design .warapper .main_box .one_o h6.heading_main {
   font-size: 23px !important;
-  color: #744496;
+  color: #3e473f;
   font-weight: 600;
 }
 
@@ -660,7 +660,7 @@ img.encrypted-img {
   letter-spacing: 1px;
   font-weight: 600;
   text-transform: uppercase;
-  background: #744496;
+  background: rgba(6, 19, 15, 0.768627451);
   padding: 16px 44px;
   text-align: center;
   border-radius: 6px;
