--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,22 @@
 /*media queries start*/
+@media screen and (max-width: 1220px) {
+  .locallanguage-text {
+    width: calc(100% + 93px);
+    padding: 38px;
+  }
+}
 @media screen and (max-width: 1199px) {
+  .leaderboard-rating {
+    border: 1px solid #00bcd4;
+    padding: 30px 55px;
+    background-color: #00bcd4;
+    text-align: center;
+    max-width: 250px;
+    margin: 0 auto;
+    border-radius: 17px;
+    transition: 1s ease;
+    opacity: 1;
+  }
   .container {
     padding: 0 20px;
   }
@@ -14,7 +31,7 @@
     font-size: 16px;
   }
   .fantasy-text.about {
-    margin-left: -97px;
+    margin-left: -80px;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -168,6 +185,13 @@
     font-weight: 600;
     opacity: 0.7;
   }
+  .leaderboard-rating h4 {
+    font-size: 24px;
+  }
+  .leaderboard-rating {
+    padding: 30px 24px;
+    max-width: 223px;
+  }
 }
 @media screen and (max-width: 820px) {
   .fantasy-picture {
@@ -182,7 +206,6 @@
   }
   .leaderboard-rating {
     padding: 30px 20px;
-    max-width: none;
   }
   .contact-picture {
     display: flex;
@@ -207,7 +230,7 @@
     max-width: 100%;
   }
   .about-picture img {
-    width: 100%;
+    max-width: 100%;
   }
   .fantasy-picture img {
     max-width: 100%;
@@ -270,6 +293,68 @@
   .fantasy-text h3 {
     margin: 20px 0 0 0;
     font-size: 27px;
+  }
+  section.home-main.mobile-table {
+    display: block;
+  }
+  .mobile-view-design p {
+    text-align: left !important;
+  }
+  p.rated-star {
+    color: #fdbb4f;
+    font-size: 14px !important;
+    margin-bottom: 0 !important;
+  }
+  section.home-main.mobile-table {
+    display: block;
+  }
+  .desktop-version {
+    display: block;
+  }
+  .mobile-view-design.entertainment {
+    display: none;
+  }
+}
+@media screen and (max-width: 480px) {
+  .mobile-view-design .awesome a {
+    font-size: 15px;
+    padding: 16px 30px;
+  }
+  .mobile-view-design .warapper .main_box .one_o h6.heading_main {
+    word-break: break-word;
+  }
+  .one_o p {
+    font-size: 18px;
+  }
+  .mobile-view-design p {
+    font-size: 17px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .first-bonus {
+    display: block;
+    text-align: center;
+    font-weight: 600;
+    font-size: 14px;
+    color: #2e3986;
+  }
+  section.home-main.mobile-table .container {
+    padding: 0 8px;
+  }
+  .myceltwo {
+    margin: 0;
+  }
+  p {
+    font-size: 14px;
+    text-align: justify;
+  }
+  .mobile-view-design p {
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 395px) {
+  .mobile-view-design .awesome a {
+    font-size: 12px;
   }
 }
 
